# file-monitoring-daemon

./: Cargo.toml  config.toml  files.json  readme.md
src/: cli.rs  daemon.rs  file.rs  main.rs  monitor.rs
