[package]
name = "rust-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.1.0"
log = "0.4.17"
daemonize = "0.5.0"
clap = "4.1.1"
toml = "0.7.3"
serde = { version = "1.0.130", features = ["derive"] }